--- a/CS5200DBMS/WebContent/WEB-INF/web.xml
+++ b/CS5200DBMS/WebContent/WEB-INF/web.xml
@@ -4,6 +4,7 @@
   <welcome-file-list>
     <welcome-file>index.html</welcome-file>
   </welcome-file-list>
+
   <servlet>
     <servlet-name>Jersey REST Service</servlet-name>
     <servlet-class>com.sun.jersey.spi.container.servlet.ServletContainer</servlet-class>
@@ -15,6 +16,10 @@
 		<param-name>com.sun.jersey.api.json.POJOMappingFeature</param-name>
 		<param-value>true</param-value>
 	</init-param>
+	  <init-param>
+  		<param-name>com.sun.jersey.api.client.filter.ClientFilter</param-name >
+  		<param-value>projectDAO.AuthenticationFilter</param-value>
+		</init-param>
     <load-on-startup>1</load-on-startup>
   </servlet>
   <servlet-mapping>
